2003-08-06    <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): actually implement --version
	* configure.ac: Bump version.

2003-08-05    <dgay@barnowl.research.intel-research.net>

	* scripts/start-avarice: use new host:portname syntax

2003-08-05  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/Makefile.am (avarice_SOURCES): Add gnu_getopt* files.
	* src/avarice.h: Delete DEFAULT_PORT.
	* src/gnu_getopt.c: New file.
	* src/gnu_getopt.h: New file.
	* src/gnu_getopt1.c: New file.
	* src/main.cc: Use gnu getop_long() to parse argv.
	Clean up usage() output to be more compact.
	Allow operations (program, erase, verify, write-fuses, etc) to be 
	performed before going into gdb server mode.
	Change "[[hostname] port]" options into a single "[[host]:port]"
	option where ":port" causes avarice to enter server mode.
	All options now have short and long equivalents.

2003-08-04  Theodore A. Roth  <troth@openavr.org>

	* src/main.cc: Revert program flag to default to false.
	Revert setting program flag to false if --verify is given.

2003-07-31  David Gay  <dgay@intel-research.net>

	* src/main.cc (main): when no gdb interaction: don't perform
	extraneous enableProgramming/disableProgramming
	when gdb interaction: program if a file specified
	* scripts/gdb-avarice-script: set hardware watch/break limits
	* scripts/ice-gdb.in: --ignore-intr should not capture,
	--external flag
	* scripts/start-avarice: no need for avr-objcopy

2003-07-29  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	Search for library needed for inet_aton().

2003-07-25  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump Version
	* src/jtagio.cc: Double all of the vectors_end initializers.

2003-07-24  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/jtagprog.cc (initImage): Fix off by one in for loop.
	(jtag_create_image): Clean up for loop to use common idiom.